--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bluebird": "^3.3.5",
     "bn": "^1.0.1",
     "bn.js": "^4.11.3",
+    "dotenv": "^6.1.0",
     "ethereumjs-abi": "^0.6.4",
     "ethereumjs-testrpc": "^6.0.3",
     "ethereumjs-util": "^5.1.2",
@@ -32,6 +33,8 @@
     "should": "^8.3.1",
     "truffle": "^4.0.1",
     "truffle-config": "^1.0.3",
-    "truffle-expect": "^0.0.3"
+    "truffle-expect": "^0.0.3",
+    "truffle-flattener": "^1.2.10",
+    "truffle-hdwallet-provider": "0.0.6"
   }
 }
